--- a/register/index.html
+++ b/register/index.html
@@ -131,6 +131,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="../" >Project Information</a></li>
                         <li><a href="../price/">Price Guide</a></li>
+                        <li><a href="../payment/">Payment Schedule</a></li>
                         <li><a href="#" class="active">Register Interest</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -141,6 +142,7 @@
             <ul class="wpb-mobile-menu">
                 <li><a href="../">Project Information</a></li>
                 <li><a href="../price/">Price Guide</a></li>
+                <li><a href="../payment/">Payment Schedule</a></li>
                 <li><a href="#" class="active">Register Interest</a></li>
             </ul>
             <!-- Mobile Menu End -->
