--- a/payment/index.html
+++ b/payment/index.html
@@ -130,9 +130,9 @@
                     <!-- Start Navigation List -->
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="../" >Project Information</a></li>
-                        <li><a href="#" class="active">Price Guide</a></li>
-                        <li><a href="../payment/">Payment Schedule</a></li>
-                        <li><a href="../register/">Register Interest</a></li>
+                        <li><a href="../price/">Price Guide</a></li>
+                        <li><a href="#" class="active">Payment Schedule</a></li>
+                        <li><a href="../register">Register Interest</a></li>
                     </ul>
                     <!-- End Navigation List -->
                 </div>
@@ -140,9 +140,9 @@
 
             <!-- Mobile Menu Start -->
             <ul class="wpb-mobile-menu">
-                <li><a href="../" >Project Information</a></li>
-                <li><a href="#" class="active">Price Guide</a></li>
-                <li><a href="../payment/">Payment Schedule</a></li>
+                <li><a href="../">Project Information</a></li>
+                <li><a href="../price/">Price Guide</a></li>
+                <li><a href="#" class="active">Payment Schedule</a></li>
                 <li><a href="../register/">Register Interest</a></li>
             </ul>
             <!-- Mobile Menu End -->
@@ -161,64 +161,14 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-10">
-                    <div class="table-responsive">
-                        <table class="table table-condensed table-striped table-hover">
-                            <thead>
-                            <th>Type</th>
-                            <th>Avg PSF</th>
-                            <th>Low</th>
-                            <th>High</th>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>apartment 1 bedroom</td>
-                                <td>316</td>
-                                <td>243K</td>
-                                <td>312K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 2 bedroom</td>
-                                <td>257</td>
-                                <td>293K</td>
-                                <td>385K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 3 bedroom</td>
-                                <td>254</td>
-                                <td>311K</td>
-                                <td>388K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment studio</td>
-                                <td>329</td>
-                                <td>193K</td>
-                                <td>237K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse 3 bedroom</td>
-                                <td></td>
-                                <td>585K</td>
-                                <td>585K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse 4 bedroom</td>
-                                <td></td>
-                                <td>850K</td>
-                                <td>946K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse studio</td>
-                                <td></td>
-                                <td>410K</td>
-                                <td>410K</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                <div class="page-content col-md-12">
+
+                    <p>
+                        <img alt="The Peak @ Cambodia" src="../images/43.jpg" style="width:100%;">
+                    </p>
+
                 </div>
             </div>
-
         </div>
     </div>
     <!-- End Content -->
