--- a/index.html
+++ b/index.html
@@ -171,78 +171,34 @@
             <div class="project-page row">
                 <div class="page-content col-md-12">
 
-                    <p style="font-size: 16px">
+                    <p style="font-size: 20px">
                         3 blocks of 55 storey retail hotel & service apartment
                     </p>
 
                     <p>
                     <ul>
-                        <li><Strong>Developers: </Strong>Oxley Gem (Cambodia) Co. Ltd</li>
-                        <li><Strong>Units: </Strong>1014</li>
-                        <li><Strong>Expected TOP: </Strong>Dec 2020</li>
-                        <li><Strong>Address: </Strong>Village No. 14 SamDach Hun Sen Road</li>
+                        <li style="font-size: 16px"><Strong>Developers: </Strong>Oxley Gem (Cambodia) Co. Ltd</li>
+                        <li style="font-size: 16px"><Strong>Units: </Strong>1014</li>
+                        <li style="font-size: 16px"><Strong>Expected TOP: </Strong>Dec 2020</li>
+                        <li style="font-size: 16px"><Strong>Address: </Strong>Village No. 14 SamDach Hun Sen Road</li>
                     </ul>
                     </p>
 
                     <p>
                     <ul>
-                        <li><i class="fa fa-check-square-o"></i> Excellent Location in Phnom Penh, BKK1 district </li>
-                        <li><i class="fa fa-check-square-o"></i> Special VIP Privileges at Shangri-La Cambodia </li>
-                        <li><i class="fa fa-check-square-o"></i> Integrated Mixed Development with 5 storey Mall & Offices </li>
-                        <li><i class="fa fa-check-square-o"></i> 12% Nett Guaranteed Rental Returns over 2 years </li>
-                        <li><i class="fa fa-check-square-o"></i> Singapore SGX-listed Developer Oxley International </li>
-                        <li><i class="fa fa-check-square-o"></i> Highly Popular with Elite Cambodians – over 30% sold in 1 day </li>
-                        <li><i class="fa fa-check-square-o"></i> River View East Facing & City View West Facing Units </li>
-                        <li><i class="fa fa-check-square-o"></i> Freehold </li>
-                        <li><i class="fa fa-check-square-o"></i> Very Attractive Price from only USD150*! before discounts </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Excellent Location in Phnom Penh, BKK1 district </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Special VIP Privileges at Shangri-La Cambodia </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Integrated Mixed Development with 5 storey Mall & Offices </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> 12% Nett Guaranteed Rental Returns over 2 years </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Singapore SGX-listed Developer Oxley International </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Highly Popular with Elite Cambodians – over 30% sold in 1 day </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> River View East Facing & City View West Facing Units </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Freehold </li>
+                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Very Attractive Price from only USD150*! before discounts </li>
                     </ul>
                     </p>
 
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/01.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/02.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/03.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/04.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/05.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/06.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/07.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/08.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/09.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/10.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/11.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/12.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/13.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/14.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="images/15.jpg" style="width:100%;">
-                    </p>
+                    
 
                 </div>
             </div>
