--- a/index.html
+++ b/index.html
@@ -198,7 +198,51 @@
                     </ul>
                     </p>
 
-                    
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/01.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/02.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/03.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/04.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/05.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/06.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/07.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/08.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/09.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/10.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/11.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/12.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/13.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/14.jpg" style="width:100%;">
+                    </p>
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/15.jpg" style="width:100%;">
+                    </p>
 
                 </div>
             </div>
