change google font Crimson Text

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
 
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="css/viplaunch.min.css" media="screen">
 
@@ -171,16 +172,16 @@
             <div class="project-page row">
                 <div class="page-content col-md-12">
 
-                    <p style="font-size: 20px">
+                    <p style="font-family: Crimson Text; font-size: 20px">
                         3 blocks of 55 storey retail hotel & service apartment
                     </p>
 
                     <p>
                     <ul>
-                        <li style="font-size: 16px"><Strong>Developers: </Strong>Oxley Gem (Cambodia) Co. Ltd</li>
-                        <li style="font-size: 16px"><Strong>Units: </Strong>1014</li>
-                        <li style="font-size: 16px"><Strong>Expected TOP: </Strong>Dec 2020</li>
-                        <li style="font-size: 16px"><Strong>Address: </Strong>Village No. 14 SamDach Hun Sen Road</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Developers: </Strong>Oxley Gem (Cambodia) Co. Ltd</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Units: </Strong>1014</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Expected TOP: </Strong>Dec 2020</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Address: </Strong>Village No. 14 SamDach Hun Sen Road</li>
                     </ul>
                     </p>
 
