changes to payment schedule

--- a/payment/index.html
+++ b/payment/index.html
@@ -62,7 +62,7 @@
     <meta name="twitter:description" content="The Peak @ Cambodia">
     <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
 
-    <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="../css/viplaunch.min.css" media="screen">
 
@@ -169,11 +169,56 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-12">
+                <div class="page-content col-md-8">
 
-                    <p>
-                        <img alt="The Peak @ Cambodia" src="../images/43.jpg" style="width:100%;">
-                    </p>
+                    <h4 class="classic-title"><span>The Peak Payment Schedule</span></h4>
+                    <ol>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> Reservation fees of USD 1,200 upon confirmation of unit</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> 10% payable in 21 days (Minus USD 1,200 booking fees)</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> 10% in April 2016</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> 10% in October 2016</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> 10% in April 2017</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> 10% in October 2017</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> Remaining 50% upon completion  (2019/2020)</li>
+                    </ol>
+                    <p>&nbsp;</p>
+
+                    <h4 class="classic-title"><span>Sales Package</span></h4>
+                    <ol>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> 12% Nett Rental Guaranteed Over 2 years</li>
+                    </ol>
+                    <p>&nbsp;</p>
+
+                    <h4 class="classic-title"><span>Legal Fee</span></h4>
+                    <ol>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> S$60 - S$80 per person Notary Public Fee for witnessing signature in Singapore</li>
+                        <li style="font-family: Crimson Text; font-size: 16px"><i class="fa fa-minus"></i> US $300 upwards for Cambodian lawyer (optional)</li>
+                    </ol>
+                    <p>&nbsp;</p>
+
+                    <h4 class="classic-title"><span>Other Cost</span></h4>
+                    <div class="table-responsive">
+                        <table class="table table-condensed table-striped table-hover">
+                            <tbody>
+                            <tr>
+                                <td>Stamp Duty</td>
+                                <td><i class="fa fa-minus"></i> 4% of property value payable upon Handover (Transfer Fee for Hold Title)</td>
+                            </tr>
+                            <tr>
+                                <td>Property Tax</td>
+                                <td><i class="fa fa-minus"></i> 0.1% per annum (value determined by Immovable Property Assessment Committee)</td>
+                            </tr>
+                            <tr>
+                                <td>Rental Tax</td>
+                                <td><i class="fa fa-minus"></i> 10% per annum on gross rent</td>
+                            </tr>
+                            <tr>
+                                <td>VAT</td>
+                                <td><i class="fa fa-minus"></i> 10% (absorbed by Developer) VAT on resale applicable only for VAT registered companies</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
 
                 </div>
             </div>
