add US$ to price

--- a/price/index.html
+++ b/price/index.html
@@ -174,9 +174,9 @@
                         <table class="table table-condensed table-striped table-hover">
                             <thead>
                             <th>Type</th>
-                            <th>Avg PSF</th>
-                            <th>Low</th>
-                            <th>High</th>
+                            <th>Avg PSF (US$)</th>
+                            <th>Low (US$)</th>
+                            <th>High (US$)</th>
                             </thead>
                             <tbody>
                             <tr>
