add location, sitemap

--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
                     <!-- Start Navigation List -->
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#" class="active">Project Information</a></li>
-                        <li><a href="price/">Price Guide</a></li>
-                        <li><a href="payment/">Payment Schedule</a></li>
+                        <li><a href="location/">Location</a></li>
+                        <li><a href="sitemap/">Site Map</a></li>
+                        <li><a href="price/">Price</a></li>
+                        <li><a href="payment/">Payment</a></li>
                         <li><a href="register/">Register Interest</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -150,8 +152,10 @@
             <!-- Mobile Menu Start -->
             <ul class="wpb-mobile-menu">
                 <li><a href="#" class="active">Project Information</a></li>
-                <li><a href="price/">Price Guide</a></li>
-                <li><a href="payment/">Payment Schedule</a></li>
+                <li><a href="location/">Location</a></li>
+                <li><a href="sitemap/">Site Map</a></li>
+                <li><a href="price/">Price</a></li>
+                <li><a href="payment/">Payment</a></li>
                 <li><a href="register/">Register Interest</a></li>
             </ul>
             <!-- Mobile Menu End -->
@@ -170,7 +174,7 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-12">
+                <div class="page-content col-md-10">
 
                     <p style="font-family: Crimson Text; font-size: 20px">
                         3 blocks of 55 storey retail hotel & service apartment
