--- a/register/index.html
+++ b/register/index.html
@@ -138,8 +138,10 @@
                     <!-- Start Navigation List -->
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="../" >Project Information</a></li>
-                        <li><a href="../price/">Price Guide</a></li>
-                        <li><a href="../payment/">Payment Schedule</a></li>
+                        <li><a href="../location/">Location</a></li>
+                        <li><a href="../sitemap/">Site Map</a></li>
+                        <li><a href="../price/" >Price</a></li>
+                        <li><a href="../payment/">Payment</a></li>
                         <li><a href="#" class="active">Register Interest</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -148,9 +150,11 @@
 
             <!-- Mobile Menu Start -->
             <ul class="wpb-mobile-menu">
-                <li><a href="../">Project Information</a></li>
-                <li><a href="../price/">Price Guide</a></li>
-                <li><a href="../payment/">Payment Schedule</a></li>
+                <li><a href="../" >Project Information</a></li>
+                <li><a href="../location/">Location</a></li>
+                <li><a href="../sitemap/">Site Map</a></li>
+                <li><a href="../price/" >Price</a></li>
+                <li><a href="../payment/">Payment</a></li>
                 <li><a href="#" class="active">Register Interest</a></li>
             </ul>
             <!-- Mobile Menu End -->
