--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -139,8 +139,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="../" >Project Information</a></li>
                         <li><a href="../location/">Location</a></li>
-                        <li><a href="../sitemap/">Site Map</a></li>
-                        <li><a href="#" class="active">Price</a></li>
+                        <li><a href="#" class="active">Site Map</a></li>
+                        <li><a href="../price/">Price</a></li>
                         <li><a href="../payment/">Payment</a></li>
                         <li><a href="../register/">Register Interest</a></li>
                     </ul>
@@ -152,8 +152,8 @@
             <ul class="wpb-mobile-menu">
                 <li><a href="../" >Project Information</a></li>
                 <li><a href="../location/">Location</a></li>
-                <li><a href="../sitemap/">Site Map</a></li>
-                <li><a href="#" class="active">Price</a></li>
+                <li><a href="#" class="active">Site Map</a></li>
+                <li><a href="../price/">Price</a></li>
                 <li><a href="../payment/">Payment</a></li>
                 <li><a href="../register/">Register Interest</a></li>
             </ul>
@@ -173,61 +173,11 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-8">
-                    <div class="table-responsive">
-                        <table class="table table-condensed table-striped table-hover">
-                            <thead>
-                            <th>Type</th>
-                            <th>Avg PSF (US$)</th>
-                            <th>Low (US$)</th>
-                            <th>High (US$)</th>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>apartment studio</td>
-                                <td>329</td>
-                                <td>193K</td>
-                                <td>237K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 1 bedroom</td>
-                                <td>316</td>
-                                <td>243K</td>
-                                <td>312K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 2 bedroom</td>
-                                <td>257</td>
-                                <td>293K</td>
-                                <td>385K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 3 bedroom</td>
-                                <td>254</td>
-                                <td>311K</td>
-                                <td>388K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse studio</td>
-                                <td></td>
-                                <td>410K</td>
-                                <td>410K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse 3 bedroom</td>
-                                <td></td>
-                                <td>585K</td>
-                                <td>585K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse 4 bedroom</td>
-                                <td></td>
-                                <td>850K</td>
-                                <td>946K</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                <div class="page-content col-md-10">
+                    <p>
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="../images/sitemap1.jpg" style="width:100%;">
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="../images/sitemap2.jpg" style="width:100%;">
+                    </p>
                 </div>
             </div>
 
