--- a/payment/index.html
+++ b/payment/index.html
@@ -143,6 +143,7 @@
                         <li><a href="../price/" >Price</a></li>
                         <li><a href="#" class="active">Payment</a></li>
                         <li><a href="../register/">Register Interest</a></li>
+                        <li><a href="../zh/">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
                 </div>
@@ -156,6 +157,7 @@
                 <li><a href="../price/" >Price</a></li>
                 <li><a href="#" class="active">Payment</a></li>
                 <li><a href="../register/">Register Interest</a></li>
+                <li><a href="../zh/">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
 
@@ -238,7 +240,7 @@
                 <!-- Start Contact Widget -->
                 <div class="col-md-8">
                     <div class="footer-widget contact-widget">
-                        <img src="../images/viplaunch-sg-white.png" class="img-responsive" alt="VIPlaunch.sg"/>
+                        <a href="http://www.viplaunch.sg" target="_blank"><img src="../images/viplaunch-sg-white.png" class="img-responsive" alt="VIPlaunch.sg"/></a>
 
                         <p style="font-size: 14px; color: #8c8c8c">Share with you Singapore new launches as well as oversea project launches, stay with us for the updates.</p>
 
