--- a/register/index.html
+++ b/register/index.html
@@ -143,6 +143,7 @@
                         <li><a href="../price/" >Price</a></li>
                         <li><a href="../payment/">Payment</a></li>
                         <li><a href="#" class="active">Register Interest</a></li>
+                        <li><a href="../zh/">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
                 </div>
@@ -156,6 +157,7 @@
                 <li><a href="../price/" >Price</a></li>
                 <li><a href="../payment/">Payment</a></li>
                 <li><a href="#" class="active">Register Interest</a></li>
+                <li><a href="../zh/">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
 
@@ -173,7 +175,7 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-8">
+                <div class="page-content col-md-6">
 
                     <!-- Start Call Action -->
                     <div class="call-action call-action-boxed call-action-style4 clearfix" id="register-action">
@@ -212,12 +214,11 @@
                             <div class="form-group">
                                 <div class="controls">
                                     Preferred Unit Type: <br/>
-                                    <input name="unitType" type="checkbox" id="cbox1" value="1-bedroom"/> <label for="cbox1">1-bedroom</label><br/>
-                                    <input name="unitType" type="checkbox" id="cbox2" value="2-bedroom"/> <label for="cbox2">2-bedroom</label><br/>
-                                    <input name="unitType" type="checkbox" id="cbox3" value="3-bedroom"/> <label for="cbox3">3-bedroom</label><br/>
-                                    <input name="unitType" type="checkbox" id="cbox4" value="4-bedroom"/> <label for="cbox4">4-bedroom</label><br/>
-                                    <input name="unitType" type="checkbox" id="cbox5" value="apartment studio"/> <label for="cbox5">apartment studio</label><br/>
-                                    <input name="unitType" type="checkbox" id="cbox6" value="Penthouse"/> <label for="cbox6">Penthouse</label>
+                                    <input name="unitType" type="checkbox" id="cbox1" value="apartment studio"/> <label for="cbox1">Studio</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox2" value="1-bedroom"/> <label for="cbox2">1-bedroom</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox3" value="2-bedroom"/> <label for="cbox3">2-bedroom</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox4" value="3-bedroom"/> <label for="cbox4">3-bedroom</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox5" value="Penthouse"/> <label for="cbox5">Penthouse</label>
                                 </div>
                             </div>
 
@@ -248,7 +249,7 @@
                 <!-- Start Contact Widget -->
                 <div class="col-md-8">
                     <div class="footer-widget contact-widget">
-                        <img src="../images/viplaunch-sg-white.png" class="img-responsive" alt="VIPlaunch.sg"/>
+                        <a href="http://www.viplaunch.sg" target="_blank"><img src="../images/viplaunch-sg-white.png" class="img-responsive" alt="VIPlaunch.sg"/></a>
 
                         <p style="font-size: 14px; color: #8c8c8c">Share with you Singapore new launches as well as oversea project launches, stay with us for the updates.</p>
 
