--- a/zh/index.html
+++ b/zh/index.html
@@ -140,10 +140,10 @@
                         <li><a href="../" >Project Information</a></li>
                         <li><a href="../location/">Location</a></li>
                         <li><a href="../sitemap/">Site Map</a></li>
-                        <li><a href="#" class="active">Price</a></li>
+                        <li><a href="../price/">Price</a></li>
                         <li><a href="../payment/">Payment</a></li>
                         <li><a href="../register/">Register Interest</a></li>
-                        <li><a href="../zh/">中文</a></li>
+                        <li><a href="#" class="active">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
                 </div>
@@ -154,10 +154,10 @@
                 <li><a href="../" >Project Information</a></li>
                 <li><a href="../location/">Location</a></li>
                 <li><a href="../sitemap/">Site Map</a></li>
-                <li><a href="#" class="active">Price</a></li>
+                <li><a href="../price">Price</a></li>
                 <li><a href="../payment/">Payment</a></li>
                 <li><a href="../register/">Register Interest</a></li>
-                <li><a href="../zh/">中文</a></li>
+                <li><a href="#" class="active">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
 
@@ -175,64 +175,212 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-8">
-                    <div class="table-responsive">
-                        <table class="table table-condensed table-striped table-hover">
-                            <thead>
-                            <th>Type</th>
-                            <th>Avg PSF (US$)</th>
-                            <th>Low (US$)</th>
-                            <th>High (US$)</th>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>apartment studio</td>
-                                <td>329</td>
-                                <td>193K</td>
-                                <td>237K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 1 bedroom</td>
-                                <td>316</td>
-                                <td>243K</td>
-                                <td>312K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 2 bedroom</td>
-                                <td>257</td>
-                                <td>293K</td>
-                                <td>385K</td>
-                            </tr>
-                            <tr>
-                                <td>apartment 3 bedroom</td>
-                                <td>254</td>
-                                <td>311K</td>
-                                <td>388K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse studio</td>
-                                <td></td>
-                                <td>410K</td>
-                                <td>410K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse 3 bedroom</td>
-                                <td></td>
-                                <td>585K</td>
-                                <td>585K</td>
-                            </tr>
-                            <tr>
-                                <td>penthouse 4 bedroom</td>
-                                <td></td>
-                                <td>850K</td>
-                                <td>946K</td>
-                            </tr>
-                            </tbody>
-                        </table>
+
+                <!-- Left Panel -->
+                <div class="project-content col-md-6">
+                    <div class="item">
+                        <a class="lightbox" title="The Peak @ Cambodia"
+                           href="../images/03l.jpg">
+                            <img alt="The Peak @ Cambodia"
+                                 src="../images/03.jpg"
+                                 style="width:100%;">
+                        </a>
                     </div>
                 </div>
+                <!-- End Left Panel -->
+
+                <!-- Right Panel -->
+                <div class="project-content col-md-4">
+                    <h4><span>The Peak - 与香格里拉毗邻而居</span></h4>
+                    <p>The Peak 由新加坡上市公司豪利国际（Oxley International Holdings）精心策划发展，集合住宅，商铺，办公室和酒店与一体。</p>
+                    <p>The Peak 的外层为时尚的古铜色，象征着奢华华贵。精心设计的双子大厦宏伟壮观，并各拥有大约500间住宅。</p>
+                    <p>位于55层的观景台让你远眺金边市，钻石岛，洞里萨河和每时每刻都焕光流彩的城市美景。您可以在泳池平台上沐浴阳光，也可以沉进摩浴池（Jacuzzi）中洗去疲劳。还可以步行下螺旋阶梯，景观健身房和景观酒廊于此恭候您的光临。</p>
+                </div>
+                <!-- End Right Panel -->
+
             </div>
 
+            <div class="project-page row">
+
+                <!-- Left Panel -->
+                <div class="page-content col-md-6">
+                    <div class="item">
+                        <a class="lightbox" title="The Peak @ Cambodia"
+                           href="../images/The-Peak-Location.png">
+                            <img alt="The Peak @ Cambodia"
+                                 src="../images/The-Peak-Location.png"
+                                 style="width:100%;">
+                        </a>
+                    </div>
+                </div>
+                <!-- End Left Panel -->
+
+                <!-- Right Panel -->
+                <div class="project-content col-md-4">
+                    <p>The Peak 坐落在柬埔寨金边的中心地带，毗邻河畔大道，坐拥这座城市的交叉路口，前往周边的永旺梦乐城，金界酒店，国民议会大楼，外交部和澳洲大使馆等地仅需步行几分钟，地理位置无比适中优越。独立纪念碑及Preah Sihanouk 大道距离也仅是近段车程。</p>
+                </div>
+                <!-- End Right Panel -->
+
+            </div>
+
+            <div class="project-page row">
+
+                <!-- Left Panel -->
+                <div class="page-content col-md-6">
+                    <div class="item">
+                        <a class="lightbox" title="The Peak @ Cambodia"
+                           href="../images/05l.jpg">
+                            <img alt="The Peak @ Cambodia"
+                                 src="../images/05.jpg"
+                                 style="width:100%;">
+                        </a>
+                    </div>
+                </div>
+                <!-- End Left Panel -->
+
+                <!-- Right Panel -->
+                <div class="project-content col-md-4">
+                    <h4>发展商承诺给予买家首两年12%的投资净收益</h4>
+                    <table class="table table-condensed table-striped table-hover">
+                        <thead>
+                        <th>价格 (美元)</th>
+                        <th></th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Studio</td>
+                            <td>19万起</td>
+                        </tr>
+                        <tr>
+                            <td>1房</td>
+                            <td>24万起</td>
+                        </tr>
+                        <tr>
+                            <td>2房</td>
+                            <td>29万起</td>
+                        </tr>
+                        <tr>
+                            <td>3房</td>
+                            <td>31万起</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-condensed table-striped table-hover">
+                        <thead>
+                        <th>付款方式</th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>定金USD 1,200</td>
+                        </tr>
+                        <tr>
+                            <td>21天內付10% （扣除定金USD1,200)</td>
+                        </tr>
+                        <tr>
+                            <td>2016年4月10%, 2016年10月10%, 2017年4月10%, 2017年10月10%, 剩餘50%交房時付 (2019/2020)</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-condensed table-striped table-hover">
+                        <thead>
+                        <th>其他費用</th>
+                        <th></th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>律師費</td>
+                            <td>新元$60 – $80 新加坡公證官見證费</td>
+                        </tr>
+                        <tr>
+                            <td>印花稅</td>
+                            <td>4%（交房時付）</td>
+                        </tr>
+                        <tr>
+                            <td>房产稅</td>
+                            <td>屋價0.1%／年</td>
+                        </tr>
+                        <tr>
+                            <td>消费稅</td>
+                            <td>屋價10% 由发展商支付</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- End Right Panel -->
+
+            </div>
+
+            <div class="project-page row">
+
+                <!-- Left Panel -->
+                <div class="page-content col-md-6">
+                    <div class="item">
+                        <a class="lightbox" title="The Peak @ Cambodia"
+                           href="../images/11l.jpg">
+                            <img alt="The Peak @ Cambodia"
+                                 src="../images/11.jpg"
+                                 style="width:100%;">
+                        </a>
+                    </div>
+                </div>
+                <!-- End Left Panel -->
+
+                <!-- Right Panel -->
+                <div class="project-content col-md-4">
+                    <h4>即刻向新加坡销售代理登记以获取最新折扣和优惠</h4>
+                    <!-- Start Call Action -->
+                    <div class="call-action call-action-boxed call-action-style4 clearfix" id="register-action">
+                        <!-- Call Action Text -->
+                        <!-- Start Contact Form -->
+                        <form role="form" class="contact-form" id="contact-form" method="post">
+                            <input type="hidden" name="_subject" value="Register: The Peak @ Cambodia" />
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="text" placeholder="姓名/Name" name="Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="text" placeholder="电话/Phone" name="Phone">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="email" class="email" placeholder="电子邮件/Email" name="email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="text" placeholder="国籍/Country of Residence (default: Singapore)" name="country">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    选择房型: <br/>
+                                    <input name="unitType" type="checkbox" id="cbox1" value="apartment studio"/> <label for="cbox1">Studio</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox2" value="1-bedroom"/> <label for="cbox2">1房</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox3" value="2-bedroom"/> <label for="cbox3">2房</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox4" value="3-bedroom"/> <label for="cbox4">3房</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox5" value="Penthouse"/> <label for="cbox5">顶楼</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="controls">
+                                    <textarea rows="5" placeholder="留言/Message" name="message"></textarea>
+                                </div>
+                            </div>
+                            <div class="button-side" style="margin-top:10px;">
+                                <a href="#" class="btn-system border-btn btn-medium" id="contact-btn"><i class="icon-basket"></i> 登记</a>
+                            </div>
+                        </form>
+                        <!-- End Contact Form -->
+                    </div>
+                    <!-- End Call Action -->
+                </div>
+                <!-- End Right Panel -->
+
+            </div>
         </div>
     </div>
     <!-- End Content -->
