--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                         <li><a href="price/">Price</a></li>
                         <li><a href="payment/">Payment</a></li>
                         <li><a href="register/">Register Interest</a></li>
+                        <li><a href="zh/">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
                 </div>
@@ -157,6 +158,7 @@
                 <li><a href="price/">Price</a></li>
                 <li><a href="payment/">Payment</a></li>
                 <li><a href="register/">Register Interest</a></li>
+                <li><a href="zh/">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
 
@@ -263,7 +265,7 @@
                 <!-- Start Contact Widget -->
                 <div class="col-md-8">
                     <div class="footer-widget contact-widget">
-                        <img src="images/viplaunch-sg-white.png" class="img-responsive" alt="VIPlaunch.sg"/>
+                        <a href="http://www.viplaunch.sg" target="_blank"><img src="images/viplaunch-sg-white.png" class="img-responsive" alt="VIPlaunch.sg"/></a>
 
                         <p style="font-size: 14px; color: #8c8c8c">Share with you Singapore new launches as well as oversea project launches, stay with us for the updates.</p>
 
