add 10 reasons to zh

--- a/zh/index.html
+++ b/zh/index.html
@@ -218,6 +218,53 @@
                 <!-- Right Panel -->
                 <div class="project-content col-md-4">
                     <p>The Peak 坐落在柬埔寨金边的中心地带，毗邻河畔大道，坐拥这座城市的交叉路口，前往周边的永旺梦乐城，金界酒店，国民议会大楼，外交部和澳洲大使馆等地仅需步行几分钟，地理位置无比适中优越。独立纪念碑及Preah Sihanouk 大道距离也仅是近段车程。</p>
+                    <table class="table table-condensed table-hover">
+                        <thead>
+                        <th colspan="2">投资柬埔寨房产 The Peak的10大理由</th>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>1. </td>
+                            <td>美元自由进出－没有外汇管制、没有外销配额、没有外资差别待遇。</td>
+                        </tr>
+                        <tr>
+                            <td>2. </td>
+                            <td>一个潜力十足的新兴国度。柬埔寨经济每年以7％的速度增长，而且已持续四年，跻身为亚洲目前发展最快速的国家之一。</td>
+                        </tr>
+                        <tr>
+                            <td>3. </td>
+                            <td>论土地成本，在东南亚相对较低。</td>
+                        </tr>
+                        <tr>
+                            <td>4. </td>
+                            <td>论商机，这里百废待举。</td>
+                        </tr>
+                        <tr>
+                            <td>5. </td>
+                            <td>论人力，柬埔寨有最年轻的青壮年人口，平均年龄才二十四岁。青壮年人口和家庭形成了对房屋的巨大需求。</td>
+                        </tr>
+                        <tr>
+                            <td>6. </td>
+                            <td>外国人可以永久持有二楼及以上的房屋产权（土地除外）</td>
+                        </tr>
+                        <tr>
+                            <td>7. </td>
+                            <td>低税率， 没有奢侈税， 没有资本利得税。</td>
+                        </tr>
+                        <tr>
+                            <td>8. </td>
+                            <td>总价低， 价格从USD19xK起。</td>
+                        </tr>
+                        <tr>
+                            <td>9. </td>
+                            <td>发展商将给予买家首两年12%的净投资回报率。</td>
+                        </tr>
+                        <tr>
+                            <td>10. </td>
+                            <td>The Peak的优越就是地段，地段还是地段。</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <!-- End Right Panel -->
 
@@ -240,11 +287,10 @@
 
                 <!-- Right Panel -->
                 <div class="project-content col-md-4">
-                    <h4>发展商承诺给予买家首两年12%的投资净收益</h4>
+                    <h4>发展商承诺给予买家首两年12%的净投资回报率</h4>
                     <table class="table table-condensed table-striped table-hover">
                         <thead>
-                        <th>价格 (美元)</th>
-                        <th></th>
+                        <th colspan="2">价格 (美元)</th>
                         </thead>
                         <tbody>
                         <tr>
