add 10 reasons to zh

--- a/zh/index.html
+++ b/zh/index.html
@@ -194,7 +194,7 @@
                     <h4><span>The Peak - 与香格里拉毗邻而居</span></h4>
                     <p>The Peak 由新加坡上市公司豪利国际（Oxley International Holdings）精心策划发展，集合住宅，商铺，办公室和酒店与一体。</p>
                     <p>The Peak 的外层为时尚的古铜色，象征着奢华华贵。精心设计的双子大厦宏伟壮观，并各拥有大约500间住宅。</p>
-                    <p>位于55层的观景台让你远眺金边市，钻石岛，洞里萨河和每时每刻都焕光流彩的城市美景。您可以在泳池平台上沐浴阳光，也可以沉进摩浴池（Jacuzzi）中洗去疲劳。还可以步行下螺旋阶梯，景观健身房和景观酒廊于此恭候您的光临。</p>
+                    <p>位于55层的观景台让您远眺金边市，钻石岛，洞里萨河和每时每刻都焕光流彩的城市美景。您可以在泳池平台上沐浴阳光，也可以沉进摩浴池（Jacuzzi）中洗去疲劳。还可以步行下螺旋阶梯，景观健身房和景观酒廊于此恭候您的光临。</p>
                 </div>
                 <!-- End Right Panel -->
 
@@ -217,10 +217,10 @@
 
                 <!-- Right Panel -->
                 <div class="project-content col-md-4">
-                    <p>The Peak 坐落在柬埔寨金边的中心地带，毗邻河畔大道，坐拥这座城市的交叉路口，前往周边的永旺梦乐城，金界酒店，国民议会大楼，外交部和澳洲大使馆等地仅需步行几分钟，地理位置无比适中优越。独立纪念碑及Preah Sihanouk 大道距离也仅是近段车程。</p>
-                    <table class="table table-condensed table-hover">
+                    <p>The Peak 坐落在柬埔寨金边的中心地带，毗邻河畔大道，坐拥这座城市的交叉路口，前往周边的永旺梦乐城，金界酒店，国民议会大楼，外交部和澳洲大使馆等地仅需步行几分钟，地理位置无比适中优越。独立纪念碑及Preah Sihanouk 大道距离也仅是短车程。</p>
+                    <table class="table table-condensed table-hover borderless">
                         <thead>
-                        <th colspan="2">投资柬埔寨房产 The Peak的10大理由</th>
+                        <th colspan="2">投资柬埔寨房产 The Peak的10大理由: </th>
                         </thead>
                         <tbody>
                         <tr>
